Fixing pointer events overlap for Download CV button

--- a/index.css
+++ b/index.css
@@ -516,6 +516,8 @@ section {
   width: 45%;
   margin-left: var(--space-3xl);
   margin-bottom: var(--space-xl);
+  position: relative;
+  z-index: 10;
 }
 
 .about-text p {
